# plantmon

./: .gitignore  LICENSE  Optional.hpp  README.md  cli-build.sh  plant-monitor.ino
.devcontainer/: Dockerfile  devcontainer.json
status-mon/: CHANGELOG.md  LICENSE  status-mon.cabal
