cabal-version:      2.4
name:               status-mon
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Reads in messages from plant-mon and sends them to twitter

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mike Kaliman
maintainer:         kaliman.mike@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable status-mon
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
